// Test Documentation
syntax = "proto3";
package grpc;

// Heartbeat
service RpcService {
    // Common Interfaces
    rpc isReady (ReadyRequest) returns (ReadyResponse);
}

// Checks if this service is ready
message ReadyRequest {
    // No arguments
}

// Indicates if this service is ready
message ReadyResponse {
    // True if ready
    bool ready = 1;
}
